--- a/UI/angular10/src/app/app.component.html
+++ b/UI/angular10/src/app/app.component.html
@@ -1,1 +1,19 @@
-<h2>Hello World!!!</h2>
+<div class="container">
+    <h3 class="d-flex justify-content-center">Angular10, Web API .Net 5 with SQL Server</h3>
+    <h5 class="d-flex justify-content-center">Employee Management Portal</h5>
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <button Button routerLink="department" class="m-1 btn btn-light btn-outline-primary">
+                    Departments
+                </button>
+            </li>
+            <li class="nav-item">
+                <button Button routerLink="employee" class="m-1 btn btn-light btn-outline-primary">
+                    Employees
+                </button>
+            </li>
+        </ul>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
