--- a/UI/angular10/src/app/department/show-dep/show-dep.component.html
+++ b/UI/angular10/src/app/department/show-dep/show-dep.component.html
@@ -1,1 +1,23 @@
-<p>show-dep works!</p>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Options</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let dataItem of DepartmentList">
+            <td> {{ dataItem.Id }} </td>
+            <td> {{ dataItem.Name }} </td>
+            <td>  
+                <button type="button" class="btn btn-light mr-1">
+                    Edit
+                </button>
+                <button class="btn btn-light mr-1">
+                    Delete
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
