feature(department): add, edit and delete

--- a/UI/angular10/src/app/employee/show-emp/show-emp.component.html
+++ b/UI/angular10/src/app/employee/show-emp/show-emp.component.html
@@ -1,1 +1,9 @@
-<p>show-emp works!</p>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <td>Id</td>
+            <td>Name</td>
+            <td>Options</td>
+        </tr>
+    </thead>
+</table>
