--- a/UI/angular10/src/app/department/add-edit-dep/add-edit-dep.component.html
+++ b/UI/angular10/src/app/department/add-edit-dep/add-edit-dep.component.html
@@ -1,1 +1,12 @@
-<p>add-edit-dep works!</p>
+<div class="form-froup row">
+    <label for="Name" class="col-sm-2 col-form-label">Name</label>
+    <div class="col-sm-10">
+        <input type="text" [(ngModel)]="Name" placeholder="Enter Name Department" class="form-control">
+    </div>
+</div>
+<button (click)="addDepartment()" *ngIf="dep.Id==0" class="btn btn-primary">
+    Add
+</button>
+<button (click)="updateDepartment()" *ngIf="dep.Id!=0" class="btn btn-primary">
+    Update
+</button>
