--- a/UI/angular10/src/app/department/show-dep/show-dep.component.html
+++ b/UI/angular10/src/app/department/show-dep/show-dep.component.html
@@ -27,7 +27,8 @@
     <tr>
       <th>
         <div class="d-flex flex-row">
-          <input [(ngModel)]="DepartmentIdFilter" class="form-control" (keyup)="FilterFn" placeholder="Filter">
+          <input [(ngModel)]="DepartmentIdFilter" class="form-control" 
+          (keyup)="FilterFn($event)" placeholder="Filter">
           <button type="button" class="btn btn-light" (click)="sortResult('Id', true)">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
@@ -47,7 +48,8 @@
       </th>
       <th>
         <div class="d-flex flex-row">
-          <input [(ngModel)]="DepartmentNameFilter" class="form-control" (keyup)="FilterFn" placeholder="Filter">
+          <input [(ngModel)]="DepartmentNameFilter" class="form-control"
+           (keyup)="FilterFn($event)" placeholder="Filter">
           <button type="button" class="btn btn-light" (click)="sortResult('Name', true)">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
